<resources>
    <string name="app_name">La FCE en tus manos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_institucion">Instituicional</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_carreras">Carreras</string>
    <string name="menu_redes">Redes Sociales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_DATOS">DATOS</string>
    <string name="hello_DEPARTAMETOS">DPTOS</string>
    <string name="hello_AUTORIDADES">AUTORIDAD</string>
    <string name="hello_FCE">FCE</string>
</resources>
