<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.LaFCE.vistas.InstitucionalFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_institucional" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.LaFCE.vistas.CarrerasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_carreras" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.LaFCE.vistas.RedesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_redes" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.LaFCE.vistas.ContactoFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contacto" />


</navigation>